--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -10,11 +10,18 @@ body{
 .logoPokedex{
     height: 170px;
     padding-top: 10px;
+    @media all and(max-width: 320px) {
+        height: 110px;
+
+    }
 }
 .logoPikachu{
     position: relative;
     left:20%;
     height: 140px;
+    @media all and(max-width: 320px) {
+        height: 100px;
+    }
 }
 .body {
     display:flex;
@@ -30,11 +37,19 @@ body{
     padding-left:25px;
     border-radius: 5px;
     font-size: 20px;   
+    @media all and(max-width: 320px) {
+        padding-left:0px;
+        width: 100%;
+    }
 }
 .fa-search{
     position: relative;
     color:rgb(104, 104, 104);
     right: 30px;
+    @media all and(max-width: 320px) {
+        position: absolute;
+        padding-top: 8px;
+    }
 }
 
 
@@ -178,6 +193,11 @@ body{
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    @media all and(max-width: 320px) {
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+     }
 }
 .footer_link{
     font-size: 20px;
@@ -196,6 +216,10 @@ body{
 }
 
 .logoLauraPareja{
-    height: 100%;
+    height: 150px;
     padding: 0 30px;
+
+    @media all and(min-width: 1200px) {
+        height: 170px;
+     }
 }
